# IALFM-Prayer-Times-App

./: .flutter-plugins-dependencies  .gitignore  .gitignore.save  README.md  firebase.json  index.html  package-lock.json  package.json  pubspec.yaml  tsconfig.json
admin-desktop-tool/: .gitignore  AnnouncementMulti.tsx  AnnouncementSingle.tsx  ToolsPanel.tsx  package-lock.json  package.json  tsconfig.json
admin-desktop-tool/src/: AnnouncementMulti.tsx  AnnouncementSingle.tsx  App.tsx  ToolsPanel.tsx  index.css
admin-desktop-tool/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
admin-desktop-tool/src-tauri/capabilities/: default.json  shell.json
admin-desktop-tool/src-tauri/src/: commands.rs  main.rs
admin-desktop-tool/src-tauri/tools/announce/: announcement.json  announcements.json  clear_announcements_force.js  rc_prune_and_lock.js  single_announcement.json
android/: settings.gradle.kts
assets/: announcements.json
ios/: Podfile
ios/Runner/: Info.plist  (+2 more)
lib/: app_colors.dart  debug_tools.dart  firebase_options.dart  locale_controller.dart  main.dart  models.dart  prayer_times_firebase.dart  theme_controller.dart  ux_prefs.dart  warm_up.dart
migration/: README.md
prayer_times_app/: .firebaserc  .gitignore  README_android_release.md  hijri_override.json  l10n.yaml  pubspec.yaml
src/: AnnouncementMulti.tsx
test/: widget_test.dart
tools/: capture_store_screens.sh  check_prayer_times.sh  date_cycle.sh  date_cycle_config.sh  doze_collect.sh  fix_watch_integration.sh  size.sh  validate_json.py
url_launcher/: url_launcher.dart
web/: index.html
(+166 files in other folders)
