[package]
name = "ialfm_desktop_admin_tool"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }

# ✅ Plugins you need
tauri-plugin-dialog = "2.0.0"
tauri-plugin-shell = "2.0.0"
tauri-plugin-log = "2.0.0"

# ✅ JSON / Serde
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.4"
